Examples/virtual-service-ratings-70-test-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - match:
    - headers:
        end-user:
          regex: (Christiano|christiano|Ronaldo|ronaldo|Christiano\ Ronaldo|CR7|cr7)
    fault:
      abort:
        percent: 70
        httpStatus: 500
    route:
    - destination:
        host: ratings
        subset: v1
  - route:
    - destination:
        host: ratings
        subset: v1
