Examples/virtual-service-reviews-cr7.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        end-user:
          regex: (Christiano|christiano|Ronaldo|ronaldo|Christiano\ Ronaldo|CR7|cr7)
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
